--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "sourceMap": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "removeComments": true,
     "outDir": "./dist/",
     "pretty": true
