--- a/package.json
+++ b/package.json
@@ -15,24 +15,29 @@
     "method-override": "^2.3.6",
     "redis": "^2.8.0",
     "redredisearch": "0.0.1",
-    "telegraf": "^3.23.0"
+    "telegraf": "^3.23.0",
+    "telegraf-i18n": "^6.3.0",
+    "telegraf-session-redis": "^5.0.0"
   },
   "devDependencies": {
-    "@types/elasticsearch": "^5.0.26",
-    "@types/dotenv": "^4.0.3",
-    "@types/redis": "^2.8.6",
     "@types/body-parser": "^1.16.8",
     "@types/chai": "^4.1.0",
     "@types/compression": "^0.0.35",
+    "@types/dotenv": "^4.0.3",
+    "@types/elasticsearch": "^5.0.26",
     "@types/express": "^4.11.0",
     "@types/lodash": "^4.14.92",
     "@types/method-override": "^0.0.31",
     "@types/mocha": "^2.2.46",
+    "@types/redis": "^2.8.6",
     "@types/supertest": "^2.0.4",
     "@types/supertest-as-promised": "^2.0.35",
     "chai": "^4.1.2",
+    "https-proxy-agent": "^2.2.1",
+    "shelljs": "^0.8.2",
     "supertest": "^2.0.0",
     "supertest-as-promised": "^4.0.2",
+    "ts-node": "^7.0.1",
     "tsc": "^1.20150623.0",
     "tslint": "^5.8.0",
     "typescript": "^2.6"
@@ -41,6 +46,8 @@
     "lint:ts": "tslint -p . -t stylish --exclude \"{build,node_modules}/**\" \"**/*.ts\"",
     "lint": "npm run lint:ts",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && npm run copy-static-assets",
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
     "docs:build": "vuepress build docs",
     "docs:dev": "vuepress dev docs"
   },
